--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@heroui/badge": "^2.2.16",
     "@heroui/button": "^2.2.25",
     "@heroui/dropdown": "^2.3.25",
     "@heroui/input": "^2.4.26",
+    "@heroui/tooltip": "^2.2.22",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-slot": "^1.2.3",
-    "@reduxjs/toolkit": "^2.9.0",
+    "@tanstack/react-table": "^8.21.3",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
@@ -29,12 +31,12 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.5"
+    "zod": "^4.1.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
