--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@heroui/button": "^2.2.25",
     "@heroui/dropdown": "^2.3.25",
     "@heroui/input": "^2.4.26",
+    "@heroui/modal": "^2.2.23",
+    "@heroui/select": "^2.4.27",
     "@heroui/tooltip": "^2.2.22",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-slot": "^1.2.3",
